# PixelCompiler

./: .gitignore  CMakeLists.txt  README.md  script.px
include/: PixelDialect.h  PixelOps.td  PixelPasses.h  main.h  pixel_runtime.h
src/: PixelCompiler.cpp  PixelDialect.cpp  PixelToLLVMLowering.cpp  main.cpp  pixel_frontend.cpp  pixel_frontend.h  pixel_runtime.cpp
